--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.1",
+    "bootstrap": "^5.2.3",
     "gatsby": "^5.9.0",
     "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-slug": "^2.0.0",
     "gatsby-plugin-styled-components": "^6.9.0",
+    "gatsby-plugin-webfonts": "^2.3.2",
+    "gatsby-source-contentful": "^8.9.1",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "styled-components": "^5.3.10"
