--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^2.1.1",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.9.0",
+    "gatsby-image-background-slider": "^0.0.4",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-sharp": "^5.9.0",
